--- a/source/less/globals/global.less
+++ b/source/less/globals/global.less
@@ -47,3 +47,19 @@ input[type="radio"].visually-hidden {
   clip: rect(0, 0, 0, 0);
   overflow: hidden;
 }
+/*--------------------------------сетка----------------------------------------*/
+body > * {
+  background-color: rgba(17, 25, 241, 0.3);
+}
+ body > * > * {
+  background-color: rgba(221, 21, 21, 0.3);
+}
+body > * > * > * {
+  background-color: rgba(110, 251, 141, 0.3);
+}
+body > * > * > * > * {
+  background-color: rgba(211, 221, 11, 0.3);
+}
+body > * > * > * > * > * {
+  background-color: rgba(1, 251, 221, 0.3);
+}
