--- a/source/less/globals/mixins.less
+++ b/source/less/globals/mixins.less
@@ -1,6 +1,5 @@
-.font(@size; @weight; @line-height; @color) {
+.font(@size; @weight; @line-height) {
   font-size: @size;
   font-weight: @weight;
   line-height: @line-height;
-  color: @color;
 }
