--- a/source/less/globals/mixins.less
+++ b/source/less/globals/mixins.less
@@ -3,3 +3,14 @@
   font-weight: @weight;
   line-height: @line-height;
 }
+
+.bg-img(@url) {
+  background-image: url(@url);
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.pm-zero(@margin: 0; @padding: 0) {
+  margin: @margin;
+  padding: @padding;
+}
