Добавляет новые импортируемые файлы

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,4 +1,7 @@
 @import "globals/normalize.less";
+// @import "globals/temporary-grid.less";
 @import "globals/global.less";
 @import "globals/mixins.less";
 @import "blocks/main-nav.less";
+@import "blocks/page-main.less";
+@import "blocks/product-categories.less";
