добавляет импорт и стили блоку product-week

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -5,3 +5,4 @@
 @import "blocks/main-nav.less";
 @import "blocks/page-main.less";
 @import "blocks/product-categories.less";
+@import "blocks/product-week.less";
