Подключает блоки о нас и отзывы

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -6,3 +6,5 @@
 @import "blocks/page-main.less";
 @import "blocks/product-categories.less";
 @import "blocks/product-week.less";
+@import "blocks/write-us.less";
+@import "blocks/reviews.less";
