Вносит контентное изображение карты, добавляет стили и подключает блок контакты

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -8,3 +8,4 @@
 @import "blocks/product-week.less";
 @import "blocks/write-us.less";
 @import "blocks/reviews.less";
+@import "blocks/contacts.less";
