--- a/source/less/style.less
+++ b/source/less/style.less
@@ -9,3 +9,4 @@
 @import "blocks/write-us.less";
 @import "blocks/reviews.less";
 @import "blocks/contacts.less";
+@import "blocks/page-footer.less";
