Модификация подсветки сетки

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,5 +1,5 @@
 @import "globals/normalize.less";
-// @import "globals/temporary-grid.less";
+@import "globals/temporary-grid.less";
 @import "globals/global.less";
 @import "globals/mixins.less";
 @import "blocks/main-nav.less";
