добавляет внутрренние отступы блокам

--- a/source/less/blocks/product-categories.less
+++ b/source/less/blocks/product-categories.less
@@ -1,5 +1,5 @@
 .product-categories {
-  padding-top: 280px;
+  padding-top: 120px;
 }
 
 .product-categories__list {
@@ -20,6 +20,9 @@
 
 .product-list__title {
   .pm-zero();
+  padding-top: 40px;
+  padding-bottom: 40px;
+  padding-left: 30px;
   .font(19px; 700; 24px);
   color: #ffffff;
 }
