--- a/source/less/blocks/product-week.less
+++ b/source/less/blocks/product-week.less
@@ -1,3 +1,8 @@
+.product-week {
+  padding-top: 30px;
+  padding-bottom: 35px;
+}
+
 .product-week__title {
   .pm-zero();
   .font(17px; 700; 20px);
