Изменяет класс в разметке каталога и импортирует новые блоки

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -10,3 +10,6 @@
 @import "blocks/reviews.less";
 @import "blocks/contacts.less";
 @import "blocks/page-footer.less";
+@import "blocks/page-main-catalog.less";
+@import "blocks/catalog.less";
+@import "blocks/item.less";
