Исправляет ошибки по Тревису

--- a/source/less/globals/normalize.less
+++ b/source/less/globals/normalize.less
@@ -37,9 +37,9 @@ main {
  * Remove the gray background on active links in IE 10.
  */
 
-// a {
-//   background-color: transparent;
-// }
+a {
+  background-color: transparent;
+}
 
 /**
  * Add the correct font weight in Chrome, Edge, and Safari.
@@ -119,17 +119,6 @@ input { /* 1 */
 button,
 select { /* 1 */
   text-transform: none;
-}
-
-/**
- * Correct the inability to style clickable types in iOS and Safari.
- */
-
-button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
-  -webkit-appearance: button;
 }
 
 /**
@@ -213,34 +202,6 @@ textarea {
 [type="number"]::-webkit-inner-spin-button,
 [type="number"]::-webkit-outer-spin-button {
   height: auto;
-}
-
-/**
- * 1. Correct the odd appearance in Chrome and Safari.
- * 2. Correct the outline style in Safari.
- */
-
-[type="search"] {
-  -webkit-appearance: textfield; /* 1 */
-  outline-offset: -2px; /* 2 */
-}
-
-/**
- * Remove the inner padding in Chrome and Safari on macOS.
- */
-
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-/**
- * 1. Correct the inability to style clickable types in iOS and Safari.
- * 2. Change font properties to `inherit` in Safari.
- */
-
-::-webkit-file-upload-button {
-  -webkit-appearance: button; /* 1 */
-  font: inherit; /* 2 */
 }
 
 /* Interactive
