--- a/source/less/globals/global.less
+++ b/source/less/globals/global.less
@@ -1,17 +1,17 @@
 @font-face {
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   src:
-    url('../../fonts/opensans.woff2') format('woff2'),
-    url('../../fonts/opensans.woff') format('woff');
+    url("../../fonts/opensans.woff2") format("woff2"),
+    url("../../fonts/opensans.woff") format("woff");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   src:
-    url('../../fonts/opensansbold.woff2') format('woff2'),
-    url('../../fonts/opensansbold.woff') format('woff');
+    url("../../fonts/opensansbold.woff2") format("woff2"),
+    url("../../fonts/opensansbold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
 }
@@ -32,7 +32,7 @@ img {
   height: auto;
 }
 
-.visually-hidden:not(:focus):not(active),
+.visually-hidden:not(:focus):not(:active),
 input[type="checkbox"].visually-hidden,
 input[type="radio"].visually-hidden {
   position: absolute;
