Изменяет порядок импортов

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,10 +1,12 @@
-@import "globals/normalize.less";
-// @import "globals/temporary-grid.less";
 @import "globals/global.less";
 @import "globals/mixins.less";
+@import "globals/normalize.less";
+// @import "globals/temporary-grid.less";
+@import "globals/visually-hidden.less";
+
 @import "blocks/main-nav.less";
 @import "blocks/page-main.less";
-@import "blocks/product-categories.less";
+@import "blocks/product-list.less";
 @import "blocks/product-week.less";
 @import "blocks/write-us.less";
 @import "blocks/reviews.less";
