--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,14 +1,14 @@
 .main-nav {
   padding-top: 23px;
   padding-bottom: 23px;
-}
 
-.main-nav__list {
-  .pm-zero();
-  list-style: none;
-}
+  &__list {
+    .pm-zero();
+    list-style: none;
+  }
 
-.main-nav__link {
-  .font(17px; 700; 24px);
-  color: #000000;
+  &__link {
+    .font(17px; 700; 24px);
+    color: #000000;
+  }
 }
