--- a/source/less/blocks/product-week.less
+++ b/source/less/blocks/product-week.less
@@ -1,24 +1,24 @@
 .product-week {
   padding-top: 30px;
   padding-bottom: 35px;
-}
 
-.product-week__title {
-  .pm-zero();
-  .font(17px; 700; 20px);
-  color: #63d1bb;
-}
+  &__title {
+    .pm-zero();
+    .font(17px; 700; 20px);
+    color: #63d1bb;
+  }
 
-.product-week__title-product {
-  .pm-zero();
-  .font(25px; 700; 30px);
-}
+  &__title-product {
+    .pm-zero();
+    .font(25px; 700; 30px);
+  }
 
-.product-week__description {
-  .pm-zero();
-}
+  &__description {
+    .pm-zero();
+  }
 
-.product-week__price {
-  .pm-zero();
-  .font(17px; 700; 24px);
+  &__price {
+    .pm-zero();
+    .font(17px; 700; 24px);
+  }
 }
