--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,9 +1,9 @@
 .contacts {
   padding-top: 40px;
   padding-bottom: 40px;
-}
 
-.contacts__title {
-  .pm-zero();
-  .font(18px; 700; 30px);
+  &__title {
+    .pm-zero();
+    .font(18px; 700; 30px);
+  }
 }
