--- a/8/css/style.css
+++ b/8/css/style.css
@@ -1,3 +1,29 @@
+@font-face {
+  font-family: "Open Sans";
+  src: url("../fonts/opensans.woff2") format("woff2"), url("../fonts/opensans.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Open Sans";
+  src: url("../fonts/opensansbold.woff2") format("woff2"), url("../fonts/opensansbold.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
+}
+body {
+  font-family: "Open Sans", "Arial", sans-serif;
+  font-size: 15px;
+  line-height: 24px;
+  font-weight: 400;
+}
+a {
+  text-decoration: none;
+}
+img {
+  max-width: 100%;
+  height: auto;
+}
+/* stylelint-disable*/
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -307,32 +333,7 @@ template {
 [hidden] {
   display: none;
 }
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../../fonts/opensans.woff2') format('woff2'), url('../../fonts/opensans.woff') format('woff');
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../../fonts/opensansbold.woff2') format('woff2'), url('../../fonts/opensansbold.woff') format('woff');
-  font-weight: 700;
-  font-style: normal;
-}
-body {
-  font-family: "Open Sans", "Arial", sans-serif;
-  font-size: 15px;
-  line-height: 24px;
-  font-weight: 400;
-}
-a {
-  text-decoration: none;
-}
-img {
-  max-width: 100%;
-  height: auto;
-}
-.visually-hidden:not(:focus):not(active),
+.visually-hidden:not(:focus):not(:active),
 input[type="checkbox"].visually-hidden,
 input[type="radio"].visually-hidden {
   position: absolute;
@@ -363,7 +364,7 @@ input[type="radio"].visually-hidden {
   color: #000000;
 }
 .page-main {
-  background-image: url("../../img/hero-mobile@1x.jpg");
+  background-image: url("../img/hero-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: 0 0;
 }
@@ -376,7 +377,7 @@ input[type="radio"].visually-hidden {
   font-weight: 700;
   line-height: 30px;
 }
-.product-categories__list {
+.product-list {
   margin: 0;
   padding: 0;
 }
