--- a/source/less/style.less
+++ b/source/less/style.less
@@ -4,14 +4,17 @@
 @import "globals/normalize.less";
 // @import "globals/temporary-grid.less";
 @import "globals/visually-hidden.less";
+@import "blocks/catalog.less";
+@import "blocks/contacts.less";
+@import "blocks/form.less";
+@import "blocks/item.less";
 @import "blocks/main-nav.less";
+@import "blocks/page-footer.less";
+@import "blocks/page-main-catalog.less";
+@import "blocks/page-main-order.less";
 @import "blocks/page-main.less";
 @import "blocks/product-list.less";
 @import "blocks/product-week.less";
-@import "blocks/write-us.less";
+@import "blocks/production.less";
 @import "blocks/reviews.less";
-@import "blocks/contacts.less";
-@import "blocks/page-footer.less";
-@import "blocks/page-main-catalog.less";
-@import "blocks/catalog.less";
-@import "blocks/item.less";
+@import "blocks/write-us.less";
