Изменяет стиллизацию навигации

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -2,13 +2,15 @@
 @import "globals/global.less";
 @import "globals/mixins.less";
 @import "globals/normalize.less";
-// @import "globals/temporary-grid.less";
+@import "globals/temporary-grid.less";
+@import "globals/variables.less";
 @import "globals/visually-hidden.less";
 @import "blocks/catalog.less";
 @import "blocks/contacts.less";
 @import "blocks/form.less";
 @import "blocks/item.less";
 @import "blocks/main-nav.less";
+@import "blocks/page-header.less";
 @import "blocks/page-footer.less";
 @import "blocks/page-main-catalog.less";
 @import "blocks/page-main-order.less";
