--- a/source/less/globals/temporary-grid.less
+++ b/source/less/globals/temporary-grid.less
@@ -1,23 +1,24 @@
 body > * {
-  border: 2px solid rgba(170, 25, 241, 1);
+  background-color: rgba(170, 25, 241, 0.1);
+  outline: 2px solid rgba(170, 25, 241, 1);
 }
 
 body > * > * {
-  background-color: rgba(221, 21, 21, 0.2);
-  border: 2px solid rgba(221, 21, 21, 1);
+  background-color: rgba(221, 21, 21, 0.1);
+  outline: 2px solid rgba(221, 21, 21, 1);
 }
 
 body > * > * > * {
-  background: rgba(110, 251, 141, 0.2);
-  border-color: 2px solid rgba(110, 251, 141, 1);
+  background-color: rgba(110, 251, 141, 0.1);
+  outline: 2px solid rgba(110, 251, 141, 1);
 }
 
 body > * > * > * > * {
-  background-color: rgba(211, 221, 11, 0.2);
-  border: 2px solid rgba(211, 221, 11, 1);
+  background-color: rgba(211, 221, 11, 0.1);
+  outline: 2px solid rgba(211, 221, 11, 1);
 }
 
 body > * > * > * > * > * {
-  background-color: rgba(1, 251, 221, 0.2);
-  border: 2px solid rgba(1, 251, 221, 1);
+  background-color: rgba(1, 251, 221, 0.1);
+  outline: 2px solid rgba(1, 251, 221, 1);
 }
