Подключает созданные файлы

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -19,4 +19,6 @@
 @import "blocks/product-week.less";
 @import "blocks/production.less";
 @import "blocks/reviews.less";
+@import "blocks/search-form.less";
+@import "blocks/user-list.less";
 @import "blocks/write-us.less";
