--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,9 +1,8 @@
 .page-header {
-  display: flex;
-  flex-direction: column;
-
   &__logo {
-    height: 80px;
+    display: block;
+    height: 35px;
+    padding: 22.5px 0;
   }
 
   &__nav {
@@ -13,15 +12,36 @@
 
 @media (min-width: @table-width) {
   .page-header {
-    flex-direction: row;
+    &__wrapper {
+      position: relative;
+      width: 668px;
+      padding: 0 50px;
+      margin: 0 auto;
+    }
 
     &__logo {
-      height: 89px;
+      width: 115px; /*временно*/
+      position: absolute;
+      height: 46px;
+      padding: 21.5px 0;
     }
 
     &__nav {
-      display: flex;
-      min-height: 135px;
+      min-height: 130px;
+
+    }
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-header {
+    &__wrapper {
+      width: 1050px;
+    }
+
+    &__logo {
+      left: 50%;
+      margin-left: -57.5px; /*временно*/
     }
   }
 }
