--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -5,6 +5,31 @@
     .pm-zero();
     padding-top: 70px;
     padding-bottom: 120px;
+    padding-left: 30px;
+    padding-right: 30px;
     .font(27px; 700; 30px);
+    width: 260px;
+    margin: 0 auto;
+  }
+}
+
+@media (min-width: @table-width) {
+  .page-main {
+    &__title {
+      width: 668px;
+      padding-top: 158px;
+      padding-bottom: 368px;
+      padding-left: 50px;
+      padding-right: 50px;
+    }
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-main {
+    &__title {
+      width: 1050px;
+      padding-bottom: 358px;
+    }
   }
 }
