--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -27,6 +27,8 @@
   .main-nav {
     display: flex;
     flex-wrap: wrap;
+    width: auto;
+    margin: 0;
 
     &__toggle {
       display: none;
