Добавляет и подключает новые секции

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -7,6 +7,7 @@
 @import "globals/visually-hidden.less";
 @import "blocks/catalog.less";
 @import "blocks/contacts.less";
+@import "blocks/copyright.less";
 @import "blocks/form.less";
 @import "blocks/item.less";
 @import "blocks/main-nav.less";
@@ -20,5 +21,6 @@
 @import "blocks/production.less";
 @import "blocks/reviews.less";
 @import "blocks/search-form.less";
+@import "blocks/social.less";
 @import "blocks/user-list.less";
 @import "blocks/write-us.less";
