--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,5 +1,52 @@
 .page-footer {
-  padding-top: 20px;
-  padding-bottom: 20px;
   background-color: #f1f1f1;
+
+  &__wrapper {
+    width: 260px;
+    padding-left: 30px;
+    padding-right: 30px;
+    margin: 0 auto;
+    height: 160px; /*временно для сетки*/
+  }
+}
+
+@media (min-width: @table-width) {
+  .page-footer {
+    &__wrapper {
+      position: relative;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 668px;
+      padding-left: 50px;
+      padding-right: 50px;
+      height: 142px;
+    }
+
+    &__wrapper::before {
+      content: "";
+
+      top: middle;
+      left: 0;
+      width: 105px;
+      height: 50px;
+
+      background-color: rgba(211, 221, 125, 0.8 ); /*временно*/
+    }
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-footer {
+    &__wrapper {
+      position: relative;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 1050px;
+      padding-left: 50px;
+      padding-right: 50px;
+      height: 142px;
+    }
+  }
 }
