--- a/source/less/blocks/page-main-catalog.less
+++ b/source/less/blocks/page-main-catalog.less
@@ -1,6 +1,37 @@
 .page-main-catalog__title {
   .pm-zero();
-  padding-top: 73px;
-  padding-bottom: 73px;
   background-color: #f1f1f1;
+
+  span {
+    display: block;
+    height: 175px; /*временно для сетки*/
+    width: 260px;
+    padding-left: 30px;
+    padding-right: 30px;
+    margin: 0 auto;
+    .font(27px; 700; 30px);
+  }
+}
+
+@media (min-width: @table-width) {
+  .page-main-catalog__title {
+    margin-top: -40px;
+
+    span {
+      height: 210px; /*временно для сетки*/
+      width: 668px;
+      padding-left: 50px;
+      padding-right: 50px;
+      text-align: center;
+    }
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-main-catalog__title {
+    span {
+      height: 235px; /*временно для сетки*/
+      width: 1050px;
+    }
+  }
 }
