Правит сетку мобильного меню

--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,11 +1,12 @@
 .main-nav {
+  position: relative;
   width: 320px;
   margin: 0 auto;
 
   &__toggle {
     position: absolute;
-    top: 22.5px;
     right: 0;
+    top: -50px;
   }
 
   &__site {
