--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,4 +1,9 @@
 .page-header {
+  &__wrapper {
+    width: 320px;
+    margin: 0 auto;
+  }
+
   &__logo {
     display: block;
     height: 35px;
@@ -13,7 +18,6 @@
 @media (min-width: @table-width) {
   .page-header {
     &__wrapper {
-      position: relative;
       width: 668px;
       padding: 0 50px;
       margin: 0 auto;
