Добавляет миксины и переменные цвета в less файлы

--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -1,8 +1,6 @@
 .catalog {
-  width: 260px;
+  .container(260px; 30px);
   padding-top: 80px;
-  padding-left: 30px;
-  padding-right: 30px;
   margin: 0 auto;
 
   &__list {
@@ -13,9 +11,7 @@
 
 @media (min-width: @table-width) {
   .catalog {
-    width: 668px;
-    padding-left: 50px;
-    padding-right: 50px;
+    .container(668px; 50px);
   }
 }
 
