--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,4 +1,10 @@
 .copyright {
   height: 80px; /*временно*/
-  width: 182px;
+  .center(182px);
+}
+
+@media (min-width: @table-width) {
+  .copyright {
+    margin: 0;
+  }
 }
