--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,7 +1,6 @@
 .main-nav {
   position: relative;
-  width: 320px;
-  margin: 0 auto;
+  .center(320px);
 
   &__toggle {
     position: absolute;
@@ -20,7 +19,7 @@
 
   &__link {
     .font(17px; 700; 24px);
-    color: #000000;
+    color: @link-color;
   }
 }
 
