--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,7 +1,6 @@
 .page-header {
   &__wrapper {
-    width: 320px;
-    margin: 0 auto;
+    .center(320px);
   }
 
   &__logo {
@@ -18,9 +17,7 @@
 @media (min-width: @table-width) {
   .page-header {
     &__wrapper {
-      width: 668px;
-      padding: 0 50px;
-      margin: 0 auto;
+      .container(668px; 50px);
     }
 
     &__logo {
