--- a/source/less/blocks/page-main-order.less
+++ b/source/less/blocks/page-main-order.less
@@ -4,7 +4,7 @@
     padding-top: 73px;
     padding-bottom: 73px;
     .font(27px; 700; 30px);
-    background-color: #f1f1f1;
+    background-color: @bg-block;
   }
 
   &__description {
