--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -5,10 +5,8 @@
     .pm-zero();
     padding-top: 70px;
     padding-bottom: 120px;
-    padding-left: 30px;
-    padding-right: 30px;
+    .container(260px; 30px);
     .font(27px; 700; 30px);
-    width: 260px;
     margin: 0 auto;
   }
 }
@@ -16,11 +14,9 @@
 @media (min-width: @table-width) {
   .page-main {
     &__title {
-      width: 668px;
+      .container(668px; 50px);
       padding-top: 158px;
       padding-bottom: 368px;
-      padding-left: 50px;
-      padding-right: 50px;
     }
   }
 }
