--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -3,9 +3,8 @@
 
   &__list {
     display: flex;
-    width: 150px;
+    .center(150px);
     .pm-zero();
-    margin: 0 auto;
     list-style: none;
   }
 
