--- a/source/less/globals/mixins.less
+++ b/source/less/globals/mixins.less
@@ -14,3 +14,14 @@
   margin: @margin;
   padding: @padding;
 }
+
+.container(@width; @padding) {
+  width: @width;
+  padding-left: @padding;
+  padding-right: @padding;
+}
+
+.center(@width) {
+  width: @width;
+  margin: 0 auto;
+}
