Добавляет стили для блока отзывы

--- a/source/less/blocks/item.less
+++ b/source/less/blocks/item.less
@@ -28,6 +28,7 @@
 @media (min-width: @table-width) {
   .item {
     padding-top: 0;
+    padding-bottom: 53px;
 
     &__link {
       display: flex;
