--- a/source/less/blocks/page-main-order.less
+++ b/source/less/blocks/page-main-order.less
@@ -1,14 +1,20 @@
 .page-main-order {
   &__title {
     .pm-zero();
-    padding-top: 73px;
-    padding-bottom: 73px;
-    .font(27px; 700; 30px);
     background-color: @bg-block;
   }
 
+  span {
+    display: block;
+    height: 175px; /*временно для сетки*/
+    .container(260px; 30px);
+    margin: 0 auto;
+    .font(27px; 700; 30px);
+  }
+
   &__description {
-    .pm-zero();
+    .container(260px; 30px);
+    margin: 0 auto;
     padding-top: 28px;
     padding-bottom: 25px;
     font-size: 13px;
