--- a/source/less/style.less
+++ b/source/less/style.less
@@ -9,6 +9,12 @@
 @import "blocks/catalog.less";
 @import "blocks/contacts.less";
 @import "blocks/copyright.less";
+@import "blocks/fieldset-color.less";
+@import "blocks/fieldset-email.less";
+@import "blocks/fieldset-fullname.less";
+@import "blocks/fieldset-info.less";
+@import "blocks/fieldset-tel.less";
+@import "blocks/fieldset-type.less";
 @import "blocks/form.less";
 @import "blocks/item.less";
 @import "blocks/main-nav.less";
