--- a/source/less/blocks/fieldset-fullname.less
+++ b/source/less/blocks/fieldset-fullname.less
@@ -4,3 +4,15 @@
     margin-bottom: 20px;
   }
 }
+
+@media (min-width: @table-width) {
+  .fieldset-fullname {
+    &__legend {
+      margin-top: 65px;
+    }
+
+    &__option {
+      height: 50px; /*временно*/
+    }
+  }
+}
