--- a/source/less/blocks/fieldset-info.less
+++ b/source/less/blocks/fieldset-info.less
@@ -10,3 +10,19 @@
     margin-bottom: 25px;
   }
 }
+
+@media (min-width: @table-width) {
+  .fieldset-info {
+    &__legend {
+      margin-top: 65px;
+    }
+
+    &__field {
+      width: 500px;
+      height: 140px;
+      margin-top: 50px;
+      margin-left: auto;
+      margin-bottom: 52px;
+    }
+  }
+}
