--- a/source/less/blocks/fieldset-type.less
+++ b/source/less/blocks/fieldset-type.less
@@ -1,4 +1,8 @@
 .fieldset-type {
+  &__legend {
+      margin-top: 65px;
+    }
+
   &__option {
     height: 45px; /*временно*/
     margin-bottom: 25px;
