--- a/source/less/blocks/fieldset-email.less
+++ b/source/less/blocks/fieldset-email.less
@@ -7,3 +7,21 @@
     margin-bottom: 25px;
   }
 }
+
+@media (min-width: @table-width) {
+  .fieldset-email {
+    background-color: @bg-block;
+
+    &__field {
+      height: 50px;
+      width: 500px;
+      margin-top: 0;
+      margin-left: auto;
+    }
+
+    &__legend {
+      margin-top: 0;
+    }
+  }
+}
+
