--- a/source/less/blocks/fieldset-tel.less
+++ b/source/less/blocks/fieldset-tel.less
@@ -7,3 +7,20 @@
     margin-bottom: 25px;
   }
 }
+
+@media (min-width: @table-width) {
+  .fieldset-tel {
+    background-color: @bg-block;
+
+    &__legend {
+      margin-top: 65px;
+    }
+
+    &__field {
+      height: 50px;
+      width: 500px;
+      margin-top: 55px;
+      margin-left: auto;
+    }
+  }
+}
