Добавляет стили брейкпоинта десктоп

--- a/source/less/blocks/fieldset-info.less
+++ b/source/less/blocks/fieldset-info.less
@@ -26,3 +26,16 @@
     }
   }
 }
+
+@media (min-width: @desktop-width) {
+  .fieldset-info {
+    &__legend {
+      margin-left: 61px;
+    }
+
+    &__field {
+      width: 700px;
+      margin-right: 175px;
+    }
+  }
+}
