--- a/source/less/blocks/fieldset-type.less
+++ b/source/less/blocks/fieldset-type.less
@@ -12,3 +12,11 @@
     padding-left: 62px;
   }
 }
+
+@media (min-width: @desktop-width) {
+  .fieldset-type {
+    &__legend {
+      margin-left: 61px;
+    }
+  }
+}
