--- a/source/less/blocks/page-main-order.less
+++ b/source/less/blocks/page-main-order.less
@@ -40,3 +40,18 @@
     }
   }
 }
+
+@media (min-width: @desktop-width) {
+  .page-main-order {
+    span {
+      height: 235px; /*временно для сетки*/
+      width: 1050px;
+    }
+
+    &__description {
+      .container(700px; 225px);
+      padding-top: 80px;
+      padding-bottom: 60px;
+    }
+  }
+}
