--- a/source/less/blocks/fieldset-color.less
+++ b/source/less/blocks/fieldset-color.less
@@ -28,3 +28,15 @@
     }
   }
 }
+
+@media (min-width: @desktop-width) {
+  .fieldset-color {
+    &__legend {
+      margin-left: 61px;
+    }
+
+    &__option {
+      width: 245px;
+    }
+  }
+}
