--- a/source/less/blocks/fieldset-email.less
+++ b/source/less/blocks/fieldset-email.less
@@ -25,3 +25,15 @@
   }
 }
 
+@media (min-width: @desktop-width) {
+  .fieldset-email {
+    &__legend {
+      margin-left: 61px;
+    }
+
+    &__field {
+      width: 700px;
+      margin-right: 175px;
+    }
+  }
+}
