--- a/source/less/blocks/fieldset-fullname.less
+++ b/source/less/blocks/fieldset-fullname.less
@@ -16,3 +16,11 @@
     }
   }
 }
+
+@media (min-width: @desktop-width) {
+  .fieldset-fullname {
+    &__legend {
+      margin-left: 61px;
+    }
+  }
+}
