--- a/source/less/blocks/fieldset-tel.less
+++ b/source/less/blocks/fieldset-tel.less
@@ -24,3 +24,16 @@
     }
   }
 }
+
+@media (min-width: @desktop-width) {
+  .fieldset-tel {
+    &__legend {
+      margin-left: 61px;
+    }
+
+    &__field {
+      width: 700px;
+      margin-right: 175px;
+    }
+  }
+}
