--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -65,3 +65,26 @@
     }
   }
 }
+
+@media (min-width: @desktop-width) {
+  .form {
+    .center(1150px);
+
+    &__fieldset-wrapper {
+      width: 1050px;
+    }
+
+    &__list {
+      width: 735px;
+      margin-right: 140px;
+    }
+
+    &__notice {
+      right: 225px;
+    }
+
+    &__button {
+      margin-left: 225px;
+    }
+  }
+}
