добавляет новые миксины

--- a/source/less/globals/mixins.less
+++ b/source/less/globals/mixins.less
@@ -25,3 +25,11 @@
   width: @width;
   margin: 0 auto;
 }
+
+.m-left(@margin-left: 61px) {
+  margin-left: @margin-left;
+}
+
+.m-top(@margin-top: 65px) {
+  margin-top: @margin-top;
+}
