--- a/source/less/blocks/fieldset-color.less
+++ b/source/less/blocks/fieldset-color.less
@@ -14,7 +14,7 @@
     background-color: @bg-block;
 
     &__legend {
-      margin-top: 65px;
+      .m-top();
     }
 
     &__list {
@@ -32,7 +32,7 @@
 @media (min-width: @desktop-width) {
   .fieldset-color {
     &__legend {
-      margin-left: 61px;
+      .m-left();
     }
 
     &__option {
