--- a/source/less/blocks/fieldset-fullname.less
+++ b/source/less/blocks/fieldset-fullname.less
@@ -8,7 +8,7 @@
 @media (min-width: @table-width) {
   .fieldset-fullname {
     &__legend {
-      margin-top: 65px;
+      .m-top();
     }
 
     &__option {
@@ -20,7 +20,7 @@
 @media (min-width: @desktop-width) {
   .fieldset-fullname {
     &__legend {
-      margin-left: 61px;
+      .m-left();
     }
   }
 }
