--- a/source/less/blocks/fieldset-info.less
+++ b/source/less/blocks/fieldset-info.less
@@ -14,7 +14,7 @@
 @media (min-width: @table-width) {
   .fieldset-info {
     &__legend {
-      margin-top: 65px;
+      .m-top();
     }
 
     &__field {
@@ -30,7 +30,7 @@
 @media (min-width: @desktop-width) {
   .fieldset-info {
     &__legend {
-      margin-left: 61px;
+      .m-left();
     }
 
     &__field {
