--- a/source/less/blocks/fieldset-tel.less
+++ b/source/less/blocks/fieldset-tel.less
@@ -13,7 +13,7 @@
     background-color: @bg-block;
 
     &__legend {
-      margin-top: 65px;
+      .m-top();
     }
 
     &__field {
@@ -28,7 +28,7 @@
 @media (min-width: @desktop-width) {
   .fieldset-tel {
     &__legend {
-      margin-left: 61px;
+      .m-left();
     }
 
     &__field {
