--- a/source/less/blocks/fieldset-type.less
+++ b/source/less/blocks/fieldset-type.less
@@ -1,6 +1,6 @@
 .fieldset-type {
   &__legend {
-      margin-top: 65px;
+      .m-top();
     }
 
   &__option {
@@ -16,7 +16,7 @@
 @media (min-width: @desktop-width) {
   .fieldset-type {
     &__legend {
-      margin-left: 61px;
+      .m-left();
     }
   }
 }
