--- a/source/less/blocks/fieldset-email.less
+++ b/source/less/blocks/fieldset-email.less
@@ -28,7 +28,7 @@
 @media (min-width: @desktop-width) {
   .fieldset-email {
     &__legend {
-      margin-left: 61px;
+      .m-left();
     }
 
     &__field {
