--- a/source/less/blocks/fieldset-type.less
+++ b/source/less/blocks/fieldset-type.less
@@ -1,8 +1,4 @@
 .fieldset-type {
-  &__legend {
-    .m-top();
-  }
-
   &__option {
     height: 45px; /*временно*/
     margin-bottom: 25px;
@@ -10,6 +6,15 @@
 
   &__label {
     padding-left: 62px;
+  }
+}
+
+@media (min-width: @table-width) {
+  .fieldset-type {
+    &__legend {
+      position: relative;
+      .pos-top;
+    }
   }
 }
 
