--- a/source/less/style.less
+++ b/source/less/style.less
@@ -10,10 +10,10 @@
 @import "blocks/contacts.less";
 @import "blocks/copyright.less";
 @import "blocks/fieldset-color.less";
-@import "blocks/fieldset-email.less";
+@import "blocks/field-email.less";
 @import "blocks/fieldset-fullname.less";
-@import "blocks/fieldset-info.less";
-@import "blocks/fieldset-tel.less";
+@import "blocks/field-info.less";
+@import "blocks/field-tel.less";
 @import "blocks/fieldset-type.less";
 @import "blocks/form.less";
 @import "blocks/item.less";
