--- a/source/less/blocks/fieldset-color.less
+++ b/source/less/blocks/fieldset-color.less
@@ -14,7 +14,8 @@
     background-color: @bg-block;
 
     &__legend {
-      .m-top();
+      position: relative;
+      .pos-top();
     }
 
     &__list {
