--- a/source/less/blocks/fieldset-fullname.less
+++ b/source/less/blocks/fieldset-fullname.less
@@ -8,7 +8,8 @@
 @media (min-width: @table-width) {
   .fieldset-fullname {
     &__legend {
-      .m-top();
+      position: relative;
+      .pos-top();
     }
 
     &__option {
