--- a/source/less/blocks/search-form.less
+++ b/source/less/blocks/search-form.less
@@ -1,5 +1,49 @@
 .search-form {
-  min-height: 79px; /*временно*/
+  position: relative;
+
+  &__item {
+    width: 100%;
+    padding-top: 31px;
+    padding-bottom: 31px;
+    padding-left: 76px;
+    border: none;
+    box-shadow: inset 0px 1px 0px 0px rgba(236, 236, 236, 1);
+
+    &::placeholder {
+      .font(17px; 700; 24px);
+      color: @link-color;
+    }
+
+    &:hover::placeholder {
+      opacity: 0.6;
+    }
+
+    &:focus::placeholder,
+    &:active::placeholder {
+      opacity: 0.3;
+    }
+  }
+
+  &__icon {
+    position: absolute;
+    top: 32px;
+    left: 32px;
+
+    width: 18px;
+    height: 18px;
+
+    path {
+      fill: rgba(0, 0, 0, 0.2);
+    }
+  }
+
+  &__item:hover ~ svg path {
+    fill: rgba(99, 209, 187, 1);
+  }
+
+  &__item:focus ~ svg path {
+    fill: rgba(99, 209, 187, 0.3);
+  }
 }
 
 @media (min-width: @table-width) {
