--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -13,6 +13,21 @@
     margin-left: calc(50% - 43px);
     padding: 22.5px 0;
     z-index: 1;
+
+    &:hover,
+    &:focus {
+      opacity: 0.6;
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
+
+    &--main:hover,
+    &--main:focus,
+    &--main:active {
+      opacity: 1;
+    }
   }
 }
 
