Добавляет стили меню для планшета

--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -38,10 +38,10 @@
     }
 
     &__logo {
-      width: 115px; /*временно*/
       position: absolute;
       height: 46px;
       padding: 21.5px 0;
+      margin-left: 0;
     }
   }
 }
