--- a/source/less/blocks/search-form.less
+++ b/source/less/blocks/search-form.less
@@ -51,5 +51,18 @@
     margin-left: auto;
     width: 83px;
     min-height: 89px;
+    box-shadow: inset 0px 1px 0px 0px rgba(236, 236, 236, 1);
+
+    &__item {
+      padding-top: 35px;
+      padding-bottom: 36px;
+      box-shadow: inset 0px 1px 0px 0px rgba(236, 236, 236, 1),
+      inset 1px 0px 0px 0px rgba(236, 236, 236, 1);
+    }
+
+    &__icon {
+      top: 36px;
+      left: 34px;
+    }
   }
 }
