--- a/source/less/blocks/user-list.less
+++ b/source/less/blocks/user-list.less
@@ -3,6 +3,10 @@
   .pm-zero();
   list-style: none;
 
+  &__item--tablet {
+    display: none;
+  }
+
   &__link {
     position: relative;
     display: block;
@@ -53,6 +57,34 @@
 @media (min-width: @table-width) {
   .user-list {
     width: 264px;
-    min-height: 89px;
+
+    &__item {
+      box-shadow: inset 1px 0px 0px 0px rgba(236, 236, 236, 1);
+      text-align: right;
+    }
+
+    &__link {
+      padding-top: 30.5px;
+      padding-bottom: 34.5px;
+    }
+
+    &__icon {
+      top: 35px;
+      left: 32px;
+    }
+
+    &__item--tablet {
+      display: block;
+    }
+
+    &__link--tablet {
+      position: absolute;
+      bottom: -41px;
+      right: 0;
+      .font(15px; 400; 24px);
+      padding: 0;
+      box-shadow: none;
+      text-align: right;
+    }
   }
 }
