--- a/source/less/blocks/product-list.less
+++ b/source/less/blocks/product-list.less
@@ -3,6 +3,7 @@
   .center(320px);
 
   &__item {
+    position: relative;
     list-style: none;
   }
 
@@ -14,13 +15,82 @@
     background-color: @bg-title-dark;
   }
 
+  &__item--interior {
+    &::before {
+      content: "";
+
+      position: absolute;
+      top: 23px;
+      right: 36px;
+
+      width: 40px;
+      height: 62px;
+
+      .bg-img("../../img/icon-interior.svg");
+      opacity: 0.5;
+    }
+  }
+
+  &__item--toy {
+    &::before {
+      content: "";
+
+      position: absolute;
+      top: 21px;
+      right: 27px;
+
+      width: 60px;
+      height: 60px;
+
+      .bg-img("../../img/icon-toy.svg");
+      opacity: 0.5;
+    }
+  }
+
   &__title {
+    width: 130px;
     .pm-zero();
-    padding-top: 40px;
-    padding-bottom: 40px;
+    padding-top: 28px;
+    padding-bottom: 29px;
     padding-left: 30px;
     .font(19px; 700; 24px);
     color: @title-color;
+    z-index: 0;
+  }
+
+  &__item--interior:hover,
+  &__item--interior:focus {
+    box-shadow: 0px -5px 0px 0px @bg-title-light;
+  }
+
+  &__item--toy:hover,
+  &__item--toy:focus {
+    box-shadow: 0px -5px 0px 0px @bg-title-dark;
+  }
+
+  &__item:hover,
+  &__item:focus {
+
+    .product-list__title {
+      padding-top: 23px;
+      padding-bottom: 34px;
+    }
+
+    &::before {
+      top: 16px;
+      opacity: 0.7;
+    }
+  }
+
+  &__item:active {
+
+    .product-list__title {
+      opacity: 0.3;
+    }
+
+    &::before {
+      opacity: 0.3;
+    }
   }
 }
 
